Fixing scrollbar bug

--- a/logo-instagram/style.css
+++ b/logo-instagram/style.css
@@ -1,5 +1,5 @@
 * {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
@@ -16,6 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 98vh;
 }
 
 .quadrado {
